--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mongoose": "^6.8.2",
     "socket.io": "^4.5.4",
     "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
